// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers tickerReducer should correctly getTicker 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": null,
  "currencyFilters": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
    "litecoin": Array [
      Object {
        "key": "ltc",
        "value": "LTC",
      },
      Object {
        "key": "phots",
        "value": "photons",
      },
      Object {
        "key": "lits",
        "value": "litoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": true,
}
`;

exports[`reducers tickerReducer should correctly receiveTicker 1`] = `
Object {
  "btcTicker": undefined,
  "crypto": null,
  "currency": null,
  "currencyFilters": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
    "litecoin": Array [
      Object {
        "key": "ltc",
        "value": "LTC",
      },
      Object {
        "key": "phots",
        "value": "photons",
      },
      Object {
        "key": "lits",
        "value": "litoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "fromCurrency": null,
  "ltcTicker": undefined,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should correctly setCrypto 1`] = `
Object {
  "btcTicker": null,
  "crypto": "foo",
  "currency": null,
  "currencyFilters": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
    "litecoin": Array [
      Object {
        "key": "ltc",
        "value": "LTC",
      },
      Object {
        "key": "phots",
        "value": "photons",
      },
      Object {
        "key": "lits",
        "value": "litoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should correctly setCurrency 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": "foo",
  "currencyFilters": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
    "litecoin": Array [
      Object {
        "key": "ltc",
        "value": "LTC",
      },
      Object {
        "key": "phots",
        "value": "photons",
      },
      Object {
        "key": "lits",
        "value": "litoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;

exports[`reducers tickerReducer should handle initial state 1`] = `
Object {
  "btcTicker": null,
  "crypto": null,
  "currency": null,
  "currencyFilters": Object {
    "bitcoin": Array [
      Object {
        "key": "btc",
        "value": "BTC",
      },
      Object {
        "key": "bits",
        "value": "bits",
      },
      Object {
        "key": "sats",
        "value": "satoshis",
      },
    ],
    "litecoin": Array [
      Object {
        "key": "ltc",
        "value": "LTC",
      },
      Object {
        "key": "phots",
        "value": "photons",
      },
      Object {
        "key": "lits",
        "value": "litoshis",
      },
    ],
  },
  "fiatTicker": "USD",
  "fiatTickers": Array [
    "USD",
    "EUR",
    "JPY",
    "GBP",
    "CAD",
    "KRW",
    "AUD",
    "BRL",
    "CHF",
    "CLP",
    "CNY",
    "DKK",
    "HKD",
    "INR",
    "ISK",
    "NZD",
    "PLN",
    "RUB",
    "SEK",
    "SGD",
    "THB",
    "TWB",
    "UAH",
  ],
  "fromCurrency": null,
  "ltcTicker": null,
  "tickerLoading": false,
}
`;
